added custom query to select array of objects in date range
