# swagger/swagger.json
@@ -324,6 +324,61 @@
         }
       }
     },
+    "/cinemas/{id}/movies/": {
+      "get": {
+        "tags": [
+          "cinema"
+        ],
+        "summary": "Find all Movies in cinema between dates",
+        "description": "Returns array of showTimes and movies",
+        "operationId": "getCinemaMoviesBetweenDates",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of cinema to return",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "from",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "type": "string",
+            "default": "1"
+          },
+          {
+            "name": "to",
+            "in": "query",
+            "description": "",
+            "required": false,
+            "type": "string",
+            "default": "1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Hall"
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Cinema not found"
+          }
+        }
+      }
+    },
     "/halls": {
       "get": {
         "tags": [
